--- a/cliente/chat.html
+++ b/cliente/chat.html
@@ -1,29 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Chat WebSockets</title>
-	<link rel="stylesheet" href="estilo.css" type="text/css" media="screen" />
-</head>
-<body>
-	<div id="tela-principal">
-		<div id="tela-chat">
-			<span><strong>Usuário 1:</strong> Mensagem</span>
-			<span><strong>Usuário 2:</strong> Mensagem</span>
-			<span><strong>Usuário 3:</strong> Mensagem</span>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<title>Chat WebSockets</title>
+		<link rel="stylesheet" href="estilo.css" type="text/css" media="screen" />
+	</head>
+	<body>
+		<div id="tela-principal">
+			<div id="tela-chat">
+			</div>
+			<div id="tela-usuarios">
+			</div>
 		</div>
-		<div id="tela-usuarios">
-			<a href="javascript:void(0);" class="selecionado">Todos</a>
-			<a href="javascript:void(0);">Usuário 1</a>
-			<a href="javascript:void(0);">Usuário 2</a>
-			<a href="javascript:void(0);">Usuário 3</a>
+		<div id="barra-conversa">
+			<textarea id="ta-batepapo" placeholder="Digite o texto aqui"></textarea>
 		</div>
-	</div>
-	<div id="barra-conversa">
-		<textarea id="ta-batepapo" placeholder="Digite o texto aqui"></textarea>
-	</div>
-	<script type="text/javascript" src="jquery.min.js"></script>
-	<script type="text/javascript" src="jquery.WebSocket.js.min.js"></script>
-	<script type="text/javascript" src="chat.js"></script>
-</body>
+		<script type="text/javascript" src="jquery.min.js"></script>
+		<script type="text/javascript" src="jquery.WebSocket.js.min.js"></script>
+		<script type="text/javascript" src="json2.js"></script>
+		<script type="text/javascript" src="chat.js"></script>
+	</body>
 </html>
